[plugins] K3b FFMpeg Decoder Plugin Fix

A patch by Mikołaj Płomieński!

Reviewers: lesliezhai, anthonyfieroni

Differential Revision: https://phabricator.kde.org/D11634

BUG: 386105